src/snapshots/delta_sharing_server__state__test__get_share.snap
---
source: src/state.rs
expression: response
---
{
  "share": {
    "name": "vaccine_share",
    "id": "edacc4a7-6600-4fbb-85f3-a62a5ce6761f"
  }
}
