src/snapshots/delta_sharing_server__state__test__get_table_data.snap
---
source: src/state.rs
expression: response
---
{
  "version": 123,
  "lines": [
    {
      "protocol": {
        "minReaderVersion": 1
      }
    },
    {
      "metaData": {
        "id": "f8d5c169-3d01-4ca3-ad9e-7dc3355aedb2",
        "format": {
          "provider": "parquet"
        },
        "schemaString": "{\"type\":\"struct\",\"fields\":[{\"name\":\"eventTime\",\"type\":\"timestamp\",\"nullable\":true,\"metadata\":{}},{\"name\":\"date\",\"type\":\"date\",\"nullable\":true,\"metadata\":{}}]}",
        "partitionColumns": [
          "date"
        ]
      }
    },
    {
      "file": {
        "file": {
          "url": "https://test-bucket.s3.eu-west-1.amazonaws.com/file1?signature=123",
          "id": "8b0086f2-7b27-4935-ac5a-8ed6215a6640",
          "partitionValues": {
            "date": "2021-04-28"
          },
          "size": 573,
          "stats": "{\"numRecords\":1,\"minValues\":{\"eventTime\":\"2021-04-28T23:33:57.955Z\"},\"maxValues\":{\"eventTime\":\"2021-04-28T23:33:57.955Z\"},\"nullCount\":{\"eventTime\":0}}",
          "version": null,
          "timestamp": null,
          "expirationTimestamp": null
        }
      }
    },
    {
      "file": {
        "file": {
          "url": "https://test-bucket.s3.eu-west-1.amazonaws.com/file2?signature=123",
          "id": "591723a8-6a27-4240-a90e-57426f4736d2",
          "partitionValues": {
            "date": "2021-04-28"
          },
          "size": 573,
          "stats": "{\"numRecords\":1,\"minValues\":{\"eventTime\":\"2021-04-28T23:33:48.719Z\"},\"maxValues\":{\"eventTime\":\"2021-04-28T23:33:48.719Z\"},\"nullCount\":{\"eventTime\":0}}",
          "version": null,
          "timestamp": null,
          "expirationTimestamp": null
        }
      }
    }
  ]
}
