src/snapshots/delta_sharing_server__state__test__get_table_metadata.snap
---
source: src/state.rs
expression: response
---
{
  "version": 123,
  "lines": [
    {
      "protocol": {
        "minReaderVersion": 1
      }
    },
    {
      "metaData": {
        "id": "f8d5c169-3d01-4ca3-ad9e-7dc3355aedb2",
        "format": {
          "provider": "parquet"
        },
        "schemaString": "{\"type\":\"struct\",\"fields\":[{\"name\":\"eventTime\",\"type\":\"timestamp\",\"nullable\":true,\"metadata\":{}},{\"name\":\"date\",\"type\":\"date\",\"nullable\":true,\"metadata\":{}}]}",
        "partitionColumns": [
          "date"
        ]
      }
    }
  ]
}
