src/snapshots/delta_sharing_server__state__test__list_shares_with_pagination-2.snap
---
source: src/state.rs
expression: response2
---
{
  "items": [
    {
      "name": "sales_share",
      "id": "3e979c79-6399-4dac-bcf8-54e268f48515"
    }
  ]
}
