src/snapshots/delta_sharing_server__state__test__list_shares_with_pagination.snap
---
source: src/state.rs
expression: response1
---
{
  "items": [
    {
      "name": "vaccine_share",
      "id": "edacc4a7-6600-4fbb-85f3-a62a5ce6761f"
    }
  ],
  "nextPageToken": "continuation_token"
}
