src/snapshots/delta_sharing_server__state__test__list_tables_in_schema.snap
---
source: src/state.rs
expression: response
---
{
  "items": [
    {
      "name": "vaccine_ingredients",
      "schema": "acme_vaccine_data",
      "share": "vaccine_share",
      "shareId": "edacc4a7-6600-4fbb-85f3-a62a5ce6761f",
      "id": "dcb1e680-7da4-4041-9be8-88aff508d001"
    },
    {
      "name": "vaccine_patients",
      "schema": "acme_vaccine_data",
      "share": "vaccine_share",
      "shareId": "edacc4a7-6600-4fbb-85f3-a62a5ce6761f",
      "id": "c48f3e19-2c29-4ea3-b6f7-3899e53338fa"
    }
  ],
  "nextPageToken": "next_page_token"
}
